# gen-ai-learing

./: .gitignore  README.md  SOLUTION_SUMMARY.txt  VERIFICATION_CHECKLIST.txt  check_chroma.py  conftest.py  cot_prompt.py  inspect_sqlite.py  lang_chain.py  llm_model.py  main.py  pyproject.toml  pytest.ini  requirements.txt  self_consistency.py  test_all.sh  test_imports.py
LCEL/: __init__.py  lcel_chain.py
chroma_db/: chroma.sqlite3
custom_langchain/: __init__.py
langchain/: chains.py  document.py  json-parser-chain.py  lang-chain-example.py  llm-chatomodel.py  parser-chain.py
prompt-engineering-methods/: README.md  __init__.py  lang_chain.py  one_shot.py  requirements.txt
prompt_engineering_methods/: few_shot.py  zero_shot.py
rag/: README.md  chat_with_rag.py  rag_answer.py
src/: llm_model.py
src/custom_langchain/: chains.py  document.py  lang_chain-example.py  parser_chain.py
src/flask/: api.py
src/gradio/: gradio_chat.py  gradio_chat_qa_doc.py  gradio_full_page.py  gradio_server.py
src/prompt_engineering_methods/: one_shot.py
src/rag/: README.md  chat_with_rag.py  rag_answer.py  web_load_bot.py
src/tools/: __init__.py  bot_for_tol.py  calculator.py
src/vectors/: build_vector.py  loader_vector.py  pdf_loader.py  retrieval_qa.py  splitter.py  test_vector.py  web_loader.py
tests/: test_api.py
vectors/: build_vector.py  embeddings_model.py  pdf_loader.py  retrieval_qa.py  splitter.py  web_loader.py
